# real_estate_es

./: .env.local.example  .gitignore  README.md  middleware.js  next.config.mjs  package-lock.json  package.json
agents/: README.md  pyproject.toml  realtor_receptionist.py
agents/prompts/: system.md
app/: globals.css  layout.js  page.js  robots.js  sitemap.js
app/about/: page.js
app/api/call-completed/: route.js
app/api/calls/[sessionId]/status/: route.js
app/api/contact/: route.js
app/api/dashboard/backfill/: route.js
app/api/dashboard/export/: route.js
app/api/lead-capture/: route.js
app/api/livekit-token/: route.js
app/api/personalize/: crawl.js  route.js
app/api/recordings/[sessionId]/: route.js
app/calls/[sessionId]/: page.js
app/components/: JsonLd.js  LiveKitDemo.js  PhoneCallDemo.js  SharedLayout.js  StatusPill.jsx
app/contact/: page.js
app/costa-del-sol/: layout.js  page.js
app/dashboard/: page.js
app/demo/: page.js
app/for/[audience]/: page.js
app/integrations/: page.js
app/integrations/[slug]/: page.js
app/lib/: audiences.js  crms.js  useCases.js
app/pricing/: page.js
app/sign-in/[[...sign-in]]/: page.jsx
app/sign-up/[[...sign-up]]/: page.jsx
app/use-cases/: page.js
app/use-cases/[slug]/: page.js
